--- a/bpcs-v4/solutions.html
+++ b/bpcs-v4/solutions.html
@@ -201,42 +201,40 @@
         <div class="container">
             <h2>RECOGNITION</h2>
             <div class="row">
-                <div class="col-md-4">
+                <div class="col-md-3">
                     <div class='white-paper-entry'>
-                        <a href='http://seattlebusinessmag.com/seattle-event/100-best-companies-work-2015' target='blank'><img class='img-responsive' src="assets/img/awards/top100_2015.png" alt="..."></a>
+                        <a href='http://www.inc.com/profile/blueprint-consulting-services' target='blank'><img class='img-responsive' src="assets/img/awards/inc-5000-2015.png" alt="..."></a>
                     </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-3">
                     <div class='white-paper-entry'>
-                        <a href='http://www.bizjournals.com/seattle/morning_call/2015/07/blueprint-consulting-services-earned-eastside.html' target='blank'><img class='img-responsive' src="assets/img/awards/fastest_growing_2015.png" alt="..."></a>
+                        <a href='http://seattlebusinessmag.com/seattle-event/100-best-companies-work-2015' target='blank'><img class='img-responsive' src="assets/img/awards/top100_2015.png" alt="2015 100 Best Companies To Work"></a>
                     </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-3">
                     <div class='white-paper-entry'>
-                        <a href='http://www.bellevuechamber.org/?page=EBA' target='blank'><img class='img-responsive' src="assets/img/awards/innovativeProduct_2015.png" alt="..."></a>
+                        <a href='http://www.bizjournals.com/seattle/morning_call/2015/07/blueprint-consulting-services-earned-eastside.html' target='blank'><img class='img-responsive' src="assets/img/awards/fastest_growing_2015.png" alt="2015 Eastside Fasting Growing Companies"></a>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class='white-paper-entry'>
+                        <a href='http://www.bellevuechamber.org/?page=EBA' target='blank'><img class='img-responsive' src="assets/img/awards/innovativeProduct_2015.png" alt="2015 Innovative Product of the Year"></a>
                     </div>
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-4">
+                <div class="col-md-3">
+                    <div class='white-paper-entry'>
+                        <a href='http://www.bizjournals.com/seattle/blog/health-care-inc/2014/09/washingtons-fastest-growing-private-companies.html' target='blank'><img class='img-responsive' src="assets/img/awards/washingtonFastest_2014.png" alt="2014 Fast Growing Washington Company"></a>
+                    </div>
+                </div>
+                <div class="col-md-3">
                     <div class='white-paper-entry'>
                         <a href='http://seattlebusinessmag.com/article/100-best-companies-work-2014-full-list-0' target='blank'><img class='img-responsive' src="assets/img/awards/top100_2014.png" alt="..."></a>
                     </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-3">
                     <a href='http://www.bizjournals.com/seattle/blog/2014/05/eastside-fastest-growing-private-companies.html' target='blank'><img class='img-responsive' src="assets/img/awards/fastest_growing_2014.png" alt="..."></a>
-                </div>
-                <div class="col-md-4">
-                    <div class='white-paper-entry'>
-                        <a href='http://www.bizjournals.com/seattle/blog/health-care-inc/2014/09/washingtons-fastest-growing-private-companies.html' target='blank'><img class='img-responsive' src="assets/img/awards/washingtonFastest_2014.png" alt="..."></a>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-4">
-                    <div class='white-paper-entry'>
-                        <a href='#' target='blank'><img class='img-responsive' src="assets/img/awards/2015_waste_prevention.png" alt="..."></a>
-                    </div>
                 </div>
             </div>
             <div class='row'>
