--- a/bpcs-v4/index.html
+++ b/bpcs-v4/index.html
@@ -58,6 +58,7 @@
                     </div>
                     <p class="p-cls"></p>
                     <div class="row text-center">
+                        <img class='awardLink hero-award' src="assets/img/awards/inc-5000-white.png" alt="Inc 500 award">
                         <img class='awardLink hero-award' src="assets/img/awards/fastest_growing_2015_white.png" alt=".Blueprint wins Eastside's Fastest Growing Company of 2015 award">
                         <div class='col-md-6 col-md-offset-3'>
                             <button onClick="location.href='solutions.html'" class="btn btn-callToAction btn-block">See our solutions</button>
