--- a/bpcs-v4/index.html
+++ b/bpcs-v4/index.html
@@ -22,7 +22,7 @@
 </head>
 
 <body>
-    <div class='hero-ribbon awardLink'>
+    <div class='hero-ribbon awardLink award-location-1'>
         <img src="assets/img/awards/hero-ribbon.png" alt="" class="img-responsive" />
     </div>
     <div class="navbar navbar-default navbar-fixed-top">
