--- a/bpcs-v4/index.html
+++ b/bpcs-v4/index.html
@@ -22,9 +22,9 @@
 </head>
 
 <body>
-    <div class='hero-ribbon awardLink award-location-1'>
+    <!--<div class='hero-ribbon awardLink award-location-1'>
         <img src="assets/img/awards/hero-ribbon.png" alt="" class="img-responsive" />
-    </div>
+    </div>-->
     <div class="navbar navbar-default navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
