--- a/aptus-site/index.html
+++ b/aptus-site/index.html
@@ -21,6 +21,7 @@
         <![endif]-->
     <link rel="stylesheet" href="css/main.css">
     <script src="js/modernizr-2.6.2-respond-1.1.0.min.js"></script>
+    <script src="https://boards.greenhouse.io/embed/job_board/js?for=aptusgroup"></script>
 </head>
 
 <body>
@@ -113,6 +114,8 @@
     <div class="section" id='careers'>
         <div class="container">
             <h2>Careers</h2>
+            <div id="grnhse_app"></div>
+            <!--
             <div class="row">
                 <div class="col-md-6">
                     <div class='card1'>
@@ -193,6 +196,7 @@
                     </div>
                 </div>
             </div>
+            -->
         </div>
     </div>
     <div class="section">
