--- a/aptus-site/index.html
+++ b/aptus-site/index.html
@@ -174,6 +174,7 @@
         </div>
     </div>
     <div class="section">
+    <h2>Our Services</h2>
         <div class="container">
             <div class="row">
                 <div class="col-md-4 col-sm-6">
