--- a/robotpineapple/index.html
+++ b/robotpineapple/index.html
@@ -3,10 +3,27 @@
 	<head>
 		<title>robot pineapple</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/pure-min.css">
+		<link href='http://fonts.googleapis.com/css?family=Roboto+Mono:400,100' rel='stylesheet' type='text/css'>
+		<style>
+		body
+		{
+			font-family: 'Roboto Mono';
+			text-align: center;
+			font-weight: 100;
+			padding-top: 20%;
+		}
+
+		h1
+		{
+			font-weight: 100;
+
+		}
+
+
+		</style>
 	</head>
 	<body>
-		ROBOTpineapple
+		<h1>ROBOT/pineapple</h1>
 	</body>
 
 
