--- a/bpcs-techwrite-dashboard/index.html
+++ b/bpcs-techwrite-dashboard/index.html
@@ -32,6 +32,7 @@
                         <td>ARTICLE #</td>
                         <td>LEVEL</td>
                         <td>STATUS</td>
+                        <td>CONTENT CREATOR</td>
                         <td>DRAFT EST</td>
                         <td>DRAFT ACTUAL</td>
                         <td>DRAFT DIFF</td>
