--- a/bpcs-techwrite-dashboard/index.html
+++ b/bpcs-techwrite-dashboard/index.html
@@ -23,6 +23,12 @@
                     <div id='dashboard-articles-progress' class='dashboard-widget-num'></div>
                 </div>
             </div>
+            <div class='col-md-3'>
+                <div class='dashboard-widget'>
+                    <div class='dashboard-widget-label'>AVG Article Score (Editorial)</div>
+                    <div id='dashboard-articles-score' class='dashboard-widget-num'></div>
+                </div>
+            </div>
         </div>
         <div class='table-responsive'>
             <h3>Article Details</h3>
@@ -36,6 +42,7 @@
                         <td>DRAFT EST</td>
                         <td>DRAFT ACTUAL</td>
                         <td>DRAFT DIFF</td>
+                        <td>EDITORIAL SCORE</td>
                     </tr>
                 </tbody>
             </table>
