--- a/bpcs-techwrite-dashboard/index.html
+++ b/bpcs-techwrite-dashboard/index.html
@@ -35,7 +35,7 @@
         <div class='table-responsive'>
             <h3>Article Details</h3>
             <table id="myTable" data-toggle="table" class="table table-striped table-bordered table-hover table-condensed">
-                <tbody>
+                <thead>
                     <tr>
                         <td>ARTICLE #</td>
                         <td>LEVEL</td>
@@ -46,6 +46,9 @@
                         <td>DRAFT DIFF</td>
                         <td>EDITORIAL SCORE</td>
                     </tr>
+                </thead>
+                <tbody>
+                    
                 </tbody>
             </table>
         </div>
