--- a/bpcs-techwrite-dashboard/index.html
+++ b/bpcs-techwrite-dashboard/index.html
@@ -37,14 +37,14 @@
             <table id="myTable" data-toggle="table" class="table table-striped table-bordered table-hover table-condensed">
                 <thead>
                     <tr>
-                        <td>ARTICLE #</td>
-                        <td>LEVEL</td>
-                        <td>STATUS</td>
-                        <td>CONTENT CREATOR</td>
-                        <td>DRAFT EST</td>
-                        <td>DRAFT ACTUAL</td>
-                        <td>DRAFT DIFF</td>
-                        <td>EDITORIAL SCORE</td>
+                        <th>ARTICLE #</th>
+                        <th>LEVEL</th>
+                        <th>STATUS</th>
+                        <th>CONTENT CREATOR</th>
+                        <th>DRAFT EST</th>
+                        <th>DRAFT ACTUAL</th>
+                        <th>DRAFT DIFF</th>
+                        <th>EDITORIAL SCORE</th>
                     </tr>
                 </thead>
                 <tbody>
