--- a/bpcs-techwrite-dashboard/index.html
+++ b/bpcs-techwrite-dashboard/index.html
@@ -38,13 +38,13 @@
                 <thead>
                     <tr>
                         <th>ARTICLE #</th>
-                        <th>LEVEL</th>
-                        <th>STATUS</th>
-                        <th>CONTENT CREATOR</th>
+                        <th data-field="level" data-sortable="true">LEVEL</th>
+                        <th data-field="status" data-sortable="true">STATUS</th>
+                        <th data-field="contentCreator" data-sortable="true">CONTENT CREATOR</th>
                         <th>DRAFT EST</th>
                         <th>DRAFT ACTUAL</th>
                         <th>DRAFT DIFF</th>
-                        <th>EDITORIAL SCORE</th>
+                        <th data-field="editScore" data-sortable="true">EDITORIAL SCORE</th>
                     </tr>
                 </thead>
                 <tbody>
