--- a/bpcs-techwrite-dashboard/index.html
+++ b/bpcs-techwrite-dashboard/index.html
@@ -34,7 +34,7 @@
         </div>
         <div class='table-responsive'>
             <h3>Article Details</h3>
-            <table id="myTable" data-toggle="table" class="table table-striped table-bordered table-hover table-condensed">
+            <table id="myTable" data-toggle="table" data-sort-order="desc" data-sort-name="status" class="table table-striped table-bordered table-hover table-condensed">
                 <thead>
                     <tr>
                         <th>ARTICLE #</th>
