--- a/bpcs-techwrite-dashboard/index.html
+++ b/bpcs-techwrite-dashboard/index.html
@@ -4,8 +4,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" href="dashboard.css">
-    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.8.1/bootstrap-table.min.css">
-
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 </head>
 
@@ -34,7 +32,7 @@
         </div>
         <div class='table-responsive'>
             <h3>Article Details</h3>
-            <table id="myTable" data-toggle="table" data-sort-order="desc" data-sort-name="status" class="table table-striped table-bordered table-hover table-condensed">
+            <table class="table table-striped table-bordered table-hover table-condensed">
                 <thead>
                     <tr>
                         <th>ARTICLE #</th>
@@ -54,7 +52,6 @@
         </div>
     </div>
     <script type='text/javascript' src='timetracker.js'></script>
-        <script src="//cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.8.1/bootstrap-table.min.js"></script>
 </body>
 
 </html>
