--- a/bpcs-techwrite-dashboard/index.html
+++ b/bpcs-techwrite-dashboard/index.html
@@ -32,7 +32,7 @@
         </div>
         <div class='table-responsive'>
             <h3>Article Details</h3>
-            <table class="table table-striped table-bordered table-hover table-condensed">
+            <table id="myTable" class="table table-striped table-bordered table-hover table-condensed">
                 <thead>
                     <tr>
                         <th>ARTICLE #</th>
