--- a/bpcs-techwrite-dashboard/index.html
+++ b/bpcs-techwrite-dashboard/index.html
@@ -3,31 +3,61 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://bootswatch.com/simplex/bootstrap.min.css">
     <link rel="stylesheet" href="dashboard.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 </head>
 
 <body>
+    <div class="navbar navbar-default">
+        <div class="container">
+            <div class="navbar-header">
+                <a href="../" class="navbar-brand">GoDaddy Cloud Docs Metrics Dashboard</a>
+                <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar-main">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+            </div>
+            <div class="navbar-collapse collapse" id="navbar-main">
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="https://waffle.io/gnakan/gd-cloud-docs" target="_blank">Waffle Board</a></li>
+                    <li><a href="https://github.com/gnakan/gd-cloud-docs" target="_blank">Github Repo</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
     <div class='container'>
-        <h1>Weekly Status</h1>
-        <div class='row'>
-            <div class='col-md-3'>
-                <div class='dashboard-widget'>
-                    <div class='dashboard-widget-label'>Assigned Articles</div>
-                    <div id='dashboard-articles-num' class='dashboard-widget-num'></div>
+        <h3>Overview</h3>
+        <div class='container'>
+            <div class='row'>
+                <div class='col-md-3'>
+                    <div class='dashboard-widget'>
+                        <div class='dashboard-widget-label'>Assigned Articles</div>
+                        <div id='dashboard-articles-num' class='dashboard-widget-num'></div>
+                    </div>
+                </div>
+                <div class='col-md-3'>
+                    <div class='dashboard-widget'>
+                        <div class='dashboard-widget-label'>Articles In Progress</div>
+                        <div id='dashboard-articles-progress' class='dashboard-widget-num'></div>
+                    </div>
+                </div>
+                <div class='col-md-3'>
+                    <div class='dashboard-widget'>
+                        <div class='dashboard-widget-label'>AVG Article Score (Editorial)</div>
+                        <div id='dashboard-articles-score' class='dashboard-widget-num'></div>
+                    </div>
+                </div>
+                <div class='col-md-3'>
+                    <div class='dashboard-widget'>
+                        <div class='dashboard-widget-label'>Articles Delivered</div>
+                        <div id='dashboard-articles-delivered' class='dashboard-widget-num'></div>
+                    </div>
                 </div>
             </div>
-            <div class='col-md-3'>
-                <div class='dashboard-widget'>
-                    <div class='dashboard-widget-label'>Articles In Progress</div>
-                    <div id='dashboard-articles-progress' class='dashboard-widget-num'></div>
-                </div>
-            </div>
-            <div class='col-md-3'>
-                <div class='dashboard-widget'>
-                    <div class='dashboard-widget-label'>AVG Article Score (Editorial)</div>
-                    <div id='dashboard-articles-score' class='dashboard-widget-num'></div>
-                </div>
+            <div class='row'>
+                <h3>Pipeline Status</h3>
             </div>
         </div>
         <div class='table-responsive'>
@@ -46,7 +76,6 @@
                     </tr>
                 </thead>
                 <tbody>
-                    
                 </tbody>
             </table>
         </div>
