--- a/bpcs-techwrite-dashboard/index.html
+++ b/bpcs-techwrite-dashboard/index.html
@@ -3,9 +3,13 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://bootswatch.com/simplex/bootstrap.min.css">
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/chartist.js/latest/chartist.min.css">
+    <link rel="stylesheet" href="https://bootswatch.com/cosmo/bootstrap.min.css">
     <link rel="stylesheet" href="dashboard.css">
+    <link rel="stylesheet" href="//cdn.datatables.net/1.10.8/css/jquery.dataTables.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script src="//cdn.jsdelivr.net/chartist.js/latest/chartist.min.js"></script>
+    <script src="//cdn.datatables.net/1.10.8/js/jquery.dataTables.min.js"></script>
 </head>
 
 <body>
@@ -28,12 +32,13 @@
         </div>
     </div>
     <div class='container'>
-        <h3>Overview</h3>
+        
         <div class='container'>
-            <div class='row'>
+            <div class='row pipeline-row'>
+                <h3>Overview</h3>
                 <div class='col-md-3'>
                     <div class='dashboard-widget'>
-                        <div class='dashboard-widget-label'>Assigned Articles</div>
+                        <div class='dashboard-widget-label'>Total Articles</div>
                         <div id='dashboard-articles-num' class='dashboard-widget-num'></div>
                     </div>
                 </div>
@@ -56,27 +61,55 @@
                     </div>
                 </div>
             </div>
-            <div class='row'>
+            <div class='row pipeline-row'>
                 <h3>Pipeline Status</h3>
+                <div id='progress-chart'></div>
+                <div class='col-md-3'>
+                    <div class='dashboard-widget draft'>
+                        <div class='dashboard-widget-label'>Drafting Queue Progress</div>
+                        <div id='dashboard-articles-drafting-progress' class='dashboard-widget-num-small'></div>
+                    </div>
+
+                </div>
+                <div class='col-md-3'>
+                    <div class='dashboard-widget code'>
+                        <div class='dashboard-widget-label'>Coding Queue Progress</div>
+                        <div id='dashboard-articles-coding-progress' class='dashboard-widget-num-small'></div>
+                    </div>
+
+                </div>
+                <div class='col-md-3'>
+                    <div class='dashboard-widget edit'>
+                        <div class='dashboard-widget-label'>Editing Queue Progress</div>
+                        <div id='dashboard-articles-editing-progress' class='dashboard-widget-num-small'></div>
+                    </div>
+
+                </div>
+                <div class='col-md-3'>
+                    <div class='dashboard-widget test'>
+                        <div class='dashboard-widget-label'>Testing Queue Progress</div>
+                        <div id='dashboard-articles-testing-progress' class='dashboard-widget-num-small'></div>
+                    </div>
+
+                </div>
             </div>
         </div>
         <div class='table-responsive'>
             <h3>Article Details</h3>
-            <table id="myTable" class="table table-striped table-bordered table-hover table-condensed">
+            <table id="myTable">
                 <thead>
                     <tr>
                         <th>ARTICLE #</th>
-                        <th data-field="level" data-sortable="true">LEVEL</th>
-                        <th data-field="status" data-sortable="true">STATUS</th>
-                        <th data-field="contentCreator" data-sortable="true">CONTENT CREATOR</th>
+                        <th>LEVEL</th>
+                        <th>STATUS</th>
+                        <th>CONTENT CREATOR</th>
                         <th>DRAFT EST</th>
                         <th>DRAFT ACTUAL</th>
                         <th>DRAFT DIFF</th>
-                        <th data-field="editScore" data-sortable="true">EDITORIAL SCORE</th>
+                        <th>EDITORIAL SCORE</th>
                     </tr>
                 </thead>
-                <tbody>
-                </tbody>
+                <tbody></tbody>
             </table>
         </div>
     </div>
