--- a/bpcs-techwrite-dashboard/index.html
+++ b/bpcs-techwrite-dashboard/index.html
@@ -65,6 +65,7 @@
                 <div id='progress-chart'></div>
                 <div class='col-md-3'>
                     <div class='dashboard-widget draft'>
+                        <div class='status-indicator'></div>
                         <div class='dashboard-widget-label'>Drafting Queue Progress</div>
                         <div id='dashboard-articles-drafting-progress' class='dashboard-widget-num-small'></div>
                     </div>
@@ -72,6 +73,7 @@
                 </div>
                 <div class='col-md-3'>
                     <div class='dashboard-widget code'>
+                        <div class='status-indicator'></div>
                         <div class='dashboard-widget-label'>Coding Queue Progress</div>
                         <div id='dashboard-articles-coding-progress' class='dashboard-widget-num-small'></div>
                     </div>
@@ -79,6 +81,7 @@
                 </div>
                 <div class='col-md-3'>
                     <div class='dashboard-widget edit'>
+                        <div class='status-indicator'></div>
                         <div class='dashboard-widget-label'>Editing Queue Progress</div>
                         <div id='dashboard-articles-editing-progress' class='dashboard-widget-num-small'></div>
                     </div>
@@ -86,6 +89,7 @@
                 </div>
                 <div class='col-md-3'>
                     <div class='dashboard-widget test'>
+                        <div class='status-indicator'></div>
                         <div class='dashboard-widget-label'>Testing Queue Progress</div>
                         <div id='dashboard-articles-testing-progress' class='dashboard-widget-num-small'></div>
                     </div>
