--- a/bpcs-techwrite-dashboard/index.html
+++ b/bpcs-techwrite-dashboard/index.html
@@ -64,7 +64,7 @@
                 <h3>Pipeline Status</h3>
                 <div id='progress-chart'></div>
                 <div class='col-md-3'>
-                    <div class='dashboard-widget draft'>
+                    <div class='dashboard-widget draft' title='Calculated by dividing the number of articles in "Drafting" status by the total number of articles in "Ready to Draft" and "Drafting" status'>
                         <div class='status-indicator'></div>
                         <div class='dashboard-widget-label'>Drafting Queue Progress</div>
                         <div id='dashboard-articles-drafting-progress' class='dashboard-widget-num-small'></div>
@@ -72,7 +72,7 @@
 
                 </div>
                 <div class='col-md-3'>
-                    <div class='dashboard-widget code'>
+                    <div class='dashboard-widget code' title='Calculated by dividing the number of articles in "Coding" status by the total number of articles in "Ready to Code" and "Coding" status'>
                         <div class='status-indicator'></div>
                         <div class='dashboard-widget-label'>Coding Queue Progress</div>
                         <div id='dashboard-articles-coding-progress' class='dashboard-widget-num-small'></div>
@@ -80,7 +80,7 @@
 
                 </div>
                 <div class='col-md-3'>
-                    <div class='dashboard-widget edit'>
+                    <div class='dashboard-widget edit' title='Calculated by dividing the number of articles in "Editing" status by the total number of articles in "Ready to Edit" and "Editing" status'>
                         <div class='status-indicator'></div>
                         <div class='dashboard-widget-label'>Editing Queue Progress</div>
                         <div id='dashboard-articles-editing-progress' class='dashboard-widget-num-small'></div>
@@ -88,7 +88,7 @@
 
                 </div>
                 <div class='col-md-3'>
-                    <div class='dashboard-widget test'>
+                    <div class='dashboard-widget test' title='Calculated by dividing the number of articles in "Testing" status by the total number of articles in "Ready to Test" and "Testing" status'>
                         <div class='status-indicator'></div>
                         <div class='dashboard-widget-label'>Testing Queue Progress</div>
                         <div id='dashboard-articles-testing-progress' class='dashboard-widget-num-small'></div>
