--- a/bpcs-techwrite-dashboard/index.html
+++ b/bpcs-techwrite-dashboard/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-    <link rel="stylesheet" href="//cdn.jsdelivr.net/chartist.js/latest/chartist.min.css">
+    
     <link rel="stylesheet" href="https://bootswatch.com/cosmo/bootstrap.min.css">
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/chartist.js/latest/chartist.min.css">
     <link rel="stylesheet" href="dashboard.css">
     <link rel="stylesheet" href="please-wait.css">
     <link rel="stylesheet" href="//cdn.datatables.net/1.10.8/css/jquery.dataTables.min.css">
@@ -34,7 +35,7 @@
         
         <div class='container'>
             <div class='row pipeline-row'>
-                <h3>Overview</h3>
+                <h3><span id='week'></span> Overview</h3>
                 <div class='col-md-3'>
                     <div class='dashboard-widget'>
                         <div class='dashboard-widget-label'>Total Articles</div>
@@ -59,6 +60,9 @@
                         <div id='dashboard-articles-delivered' class='dashboard-widget-num'></div>
                     </div>
                 </div>
+            </div>
+            <div class='row'>
+                 <div id='delivered-chart' class='ct-chart'></div>
             </div>
             <div class='row pipeline-row'>
                 <h3>Pipeline Status</h3>
