--- a/bpcs-techwrite-dashboard/index.html
+++ b/bpcs-techwrite-dashboard/index.html
@@ -3,7 +3,6 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-    
     <link rel="stylesheet" href="https://bootswatch.com/cosmo/bootstrap.min.css">
     <link rel="stylesheet" href="//cdn.jsdelivr.net/chartist.js/latest/chartist.min.css">
     <link rel="stylesheet" href="dashboard.css">
@@ -32,7 +31,6 @@
         </div>
     </div>
     <div class='container'>
-        
         <div class='container'>
             <div class='row pipeline-row'>
                 <h3><span id='week'></span> Overview</h3>
@@ -62,7 +60,8 @@
                 </div>
             </div>
             <div class='row'>
-                 <div id='delivered-chart' class='ct-chart'></div>
+                <h3>Delivered Articles (by week)</h3>
+                <div id='delivered-chart' class='ct-chart'></div>
             </div>
             <div class='row pipeline-row'>
                 <h3>Pipeline Status</h3>
@@ -73,7 +72,6 @@
                         <div class='dashboard-widget-label'>Drafting Queue Progress</div>
                         <div id='dashboard-articles-drafting-progress' class='dashboard-widget-num-small'></div>
                     </div>
-
                 </div>
                 <div class='col-md-3'>
                     <div class='dashboard-widget code' title='Calculated by dividing the number of articles in "Coding" status by the total number of articles in "Ready to Code" and "Coding" status'>
@@ -81,7 +79,6 @@
                         <div class='dashboard-widget-label'>Coding Queue Progress</div>
                         <div id='dashboard-articles-coding-progress' class='dashboard-widget-num-small'></div>
                     </div>
-
                 </div>
                 <div class='col-md-3'>
                     <div class='dashboard-widget edit' title='Calculated by dividing the number of articles in "Editing" status by the total number of articles in "Ready to Edit" and "Editing" status'>
@@ -89,7 +86,6 @@
                         <div class='dashboard-widget-label'>Editing Queue Progress</div>
                         <div id='dashboard-articles-editing-progress' class='dashboard-widget-num-small'></div>
                     </div>
-
                 </div>
                 <div class='col-md-3'>
                     <div class='dashboard-widget test' title='Calculated by dividing the number of articles in "Testing" status by the total number of articles in "Ready to Test" and "Testing" status'>
@@ -97,7 +93,6 @@
                         <div class='dashboard-widget-label'>Testing Queue Progress</div>
                         <div id='dashboard-articles-testing-progress' class='dashboard-widget-num-small'></div>
                     </div>
-
                 </div>
             </div>
         </div>
@@ -120,7 +115,6 @@
             </table>
         </div>
     </div>
-
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="//cdn.jsdelivr.net/chartist.js/latest/chartist.min.js"></script>
     <script src="//cdn.datatables.net/1.10.8/js/jquery.dataTables.min.js"></script>
