--- a/bpcs-techwrite-dashboard/index.html
+++ b/bpcs-techwrite-dashboard/index.html
@@ -44,6 +44,7 @@
                     <div class='dashboard-widget'>
                         <div class='dashboard-widget-label'>Articles In Progress</div>
                         <div id='dashboard-articles-progress' class='dashboard-widget-num'></div>
+                        <div id='dashboard-articles-progress-num'></div>
                     </div>
                 </div>
                 <div class='col-md-3'>
