--- a/bpcs-techwrite-dashboard/index.html
+++ b/bpcs-techwrite-dashboard/index.html
@@ -96,6 +96,26 @@
                     </div>
                 </div>
             </div>
+            <div class='row'>
+                <h3>Editorial Status</h3>
+                <div class='col-md-6'>
+                    <div class='dashboard-widget'>
+                        <div class='dashboard-widget-label'>Editor Workload</div>
+                        <a href='https://waffle.io/gnakan/gd-cloud-docs?label=Crystal%20S'>
+                            <div id='dashboard-editor-1' class='col-md-6'>
+                                <div class='dashboard-widget-num'></div>
+                                <div class='dashboard-widget-text-bottom'>Crystal</div>
+                            </div>
+                        </a>
+                        <a href='https://waffle.io/gnakan/gd-cloud-docs?label=Carla%20J'>
+                            <div id='dashboard-editor-2' class='col-md-6'>
+                                <div class='dashboard-widget-num'></div>
+                                <div class='dashboard-widget-text-bottom'>Carla</div>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+            </div>
         </div>
         <div class='table-responsive'>
             <h3>Article Details</h3>
