updated tester status

--- a/bpcs-techwrite-dashboard/index.html
+++ b/bpcs-techwrite-dashboard/index.html
@@ -98,10 +98,10 @@
                 </div>
             </div>
             <div class='row'>
-                <h3>Editorial Status</h3>
+                <h3>Workload Status</h3>
                 <div class='col-md-6'>
                     <div class='dashboard-widget'>
-                        <div class='dashboard-widget-label'>Editor Workload</div>
+                        <div class='dashboard-widget-label'>Editors</div>
                         <a href='https://waffle.io/gnakan/gd-cloud-docs?label=Crystal%20S'>
                             <div id='dashboard-editor-1' class='col-md-6'>
                                 <div class='dashboard-widget-num'></div>
@@ -112,6 +112,23 @@
                             <div id='dashboard-editor-2' class='col-md-6'>
                                 <div class='dashboard-widget-num'></div>
                                 <div class='dashboard-widget-text-bottom'>Carla</div>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+                <div class='col-md-6'>
+                    <div class='dashboard-widget'>
+                        <div class='dashboard-widget-label'>Testers</div>
+                        <a href='https://waffle.io/gnakan/gd-cloud-docs?label=Prabhu%20M'>
+                            <div id='dashboard-tester-1' class='col-md-6'>
+                                <div class='dashboard-widget-num'></div>
+                                <div class='dashboard-widget-text-bottom'>Prabhu</div>
+                            </div>
+                        </a>
+                        <a href='https://waffle.io/gnakan/gd-cloud-docs?label=Brian%20M.'>
+                            <div id='dashboard-tester-2' class='col-md-6'>
+                                <div class='dashboard-widget-num'></div>
+                                <div class='dashboard-widget-text-bottom'>Brian</div>
                             </div>
                         </a>
                     </div>
