updated for logos

--- a/bpcs-v4/solutions.html
+++ b/bpcs-v4/solutions.html
@@ -176,23 +176,29 @@
             <h2>FEATURED CLIENTS</h2>
             <div class="row">
                 <ul class='client-list'>
-                    <li><img src='assets/img/client_logos/microsoft-logo.png'></li>
-                    <li><img src='assets/img/client_logos/nordstrom-logo.png'></li>
-                    <li><img src='assets/img/client_logos/expedia-logo.png'></li>
-                    <li><img src='assets/img/client_logos/hulu-logo.png'></li>
-                    <li><img src='assets/img/client_logos/edifecs-logo.png'></li>
-                    <li><img src='assets/img/client_logos/beqom-logo.png'></li>
-                    <li><img src='assets/img/client_logos/cpxi-logo.png'></li>
-                    <li><img src='assets/img/client_logos/creative-micro-logo.png'></li>
-                    <li><img src='assets/img/client_logos/tirebuyer-logo.png'></li>
-                    <li><img src='assets/img/client_logos/ey-logo.png'></li>
-                    <li><img src='assets/img/client_logos/got-logo.png'></li>
-                    <li><img src='assets/img/client_logos/identropy-logo.png'></li>
-                    <li><img src='assets/img/client_logos/milliman-logo.png'></li>
-                    <li><img src='assets/img/client_logos/popcap-logo.png'></li>
-                    <li><img src='assets/img/client_logos/provident-logo.png'></li>
-                    <li><img src='assets/img/client_logos/godaddy-logo.png'></li>
-                    <li><img src='assets/img/client_logos/valve-logo.png'></li>
+                    <li><img src='assets/img/client_logos/microsoft-logo.png' alt='Microsoft'></li>
+                    <li><img src='assets/img/client_logos/nordstrom-logo.png' alt='Nordstrom'></li>
+                    <li><img src='assets/img/client_logos/expedia-logo.png' alt='Expedia'></li>
+                    <li><img src='assets/img/client_logos/hulu-logo.png' alt='Hulu'></li>
+                    <li><img src='assets/img/client_logos/edifecs-logo.png' alt='Edifecs'></li>
+                    <li><img src='assets/img/client_logos/beqom-logo.png' alt='Beqom'></li>
+                    <li><img src='assets/img/client_logos/cpxi-logo.png' alt='CPXi'></li>
+                    <li><img src='assets/img/client_logos/creative-micro-logo.png' alt='Creative Micro'></li>
+                    <li><img src='assets/img/client_logos/tirebuyer-logo.png' alt='Tirebuyer'></li>
+                    <li><img src='assets/img/client_logos/ey-logo.png' alt='EY'></li>
+                    <li><img src='assets/img/client_logos/got-logo.png' alt='GoT'></li>
+                    <li><img src='assets/img/client_logos/identropy-logo.png' alt='Identropy'></li>
+                    <li><img src='assets/img/client_logos/milliman-logo.png' alt='Milliman'></li>
+                    <li><img src='assets/img/client_logos/popcap-logo.png' alt='PopCap'></li>
+                    <li><img src='assets/img/client_logos/provident-logo.png' alt='Provident'></li>
+                    <li><img src='assets/img/client_logos/godaddy-logo.png' alt='GoDaddy'></li>
+                    <li><img src='assets/img/client_logos/valve-logo.png' alt='Valve'></li>
+                    <li><img src='assets/img/client_logos/access-fuel-logo.png' alt='Access Fuel'></li>
+                    <li><img src='assets/img/client_logos/group-health-logo.png' alt='Group Health'></li>
+                    <li><img src='assets/img/client_logos/pcc-logo.png' alt='PCC'></li>
+                    <li><img src='assets/img/client_logos/symetra-logo.png' alt='Symetra'></li>
+                    <li><img src='assets/img/client_logos/tarragon-logo.png' alt='Tarragon'></li>
+                    <li><img src='assets/img/client_logos/tmobile-logo.png' alt='Tmobile'></li>
                 </ul>
             </div>
         </div>
