updated aptus group

--- a/aptus-site/index.html
+++ b/aptus-site/index.html
@@ -49,9 +49,9 @@
     <!-- Homepage Slider -->
     <div class="homepage-hero">
         <div class='cover'>
-            <h3 class='sales-copy rotate0'>Superior performance, exceptional results</h3>
-            <h3 class='sales-copy rotate1'>A leading provider of IT staffing, IT talent management and IT services</h3>
-            <h3 class='sales-copy rotate2'>Empower, Augment, Enable</h3>
+            <h3 class='sales-copy rotate0'>Staffing Solutions. Outsource Services. Talent Acquisition.</br>Be ready for whatever the market demands.</h3>
+            <h3 class='sales-copy rotate1'>Staffing Solutions. Outsource Services. Talent Acquisition.</br>Be ready for whatever the market demands.</h3>
+            <h3 class='sales-copy rotate2'>Staffing Solutions. Outsource Services. Talent Acquisition.</br>Be ready for whatever the market demands.</h3>
         </div>
     </div>
     <!-- End Homepage Slider -->
@@ -79,15 +79,26 @@
         </div>
     </div>
     -->
-    <!--
     <div class="section">
         <div class="container">
-            <p>Aptus Group is an IT consulting group based in Bellevue, Washington. We provide excellent resources for any technical or business need. Our teams of exceptional individuals help our clients achieve their business goals and fulfill their technology needs. We support our client leaders by pairing them with exceptional people, proper support, and superior results.</p>
+            <p>Today, businesses face real challenges in staying ahead of technology trends and maintaining an agile workforce. Every time the market shifts, you need to adapt. When a new competitor emerges, you must re-position. When demand increases, you have to scale.</p>
+            <p>But agility is easier said than done. It can be a challenge—especially if your teams are already working at capacity.</p>
+            <p>We’re the Aptus Group and we understand the need for agility. We partner with organizations, working to understand their business goals and identify critical gaps. We deliver staffing solutions that bridge those gaps, scaling and extending teams through expert resourcing, outsource services and talent acquisition.</p>
+            <p>Contact us today to find out how we can help you achieve more.</p>
         </div>
     </div>
-    -->
     <div class="section" id='careers'>
         <div class="container">
+            <h2>Careers</h2>
+            <p>Are you an experienced industry professional, looking to work with the latest technologies? Become a member of The Aptus Group team, and be part of the Northwest’s top talent pool! </p>
+            <p>We offer:</p>
+            <ul>
+                <li>Opportunities to your expand your abilities and knowledge</li>
+                <li>Challenging, quality technology jobs that match your skillset</li>
+                <li>Work that’s available right now—not in three months</li>
+                <li>A personal relationship that you won’t get with other staffing companies</li>
+            </ul>
+            <p>We have jobs available now: Apply Today!</p>
             <div id="grnhse_app"></div>
             <!--
             <div class="row">
@@ -174,39 +185,37 @@
         </div>
     </div>
     <div class="section">
-
         <div class="container">
-        <h2>Our Services</h2>
+            <h2>Our Services</h2>
+            <p>The Aptus Group provides expert staffing solutions,  outsource services, and talent acquisition solutions to help organizations achieve their goals.</p>
             <div class="row">
                 <div class="col-md-4 col-sm-6">
                     <div class="service-wrapper">
-                        <img src="img/service-icon/diamond.png" alt="Service 1">
-                        <h3>IT Staffing Solutions</h3>
-                        <p>Our group of competent consultants make an immediate impact on your business success.</p>
+                        <h3>Staffing Solutions</h3>
+                        <p>When you need to implement solutions quickly and efficiently, our pool of expert recruitment professionals makes it happen. We offer a full range of workforce solutions to meet all your needs.</p>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6">
                     <div class="service-wrapper">
-                        <img src="img/service-icon/ruler.png" alt="Service 2">
-                        <h3>IT Managed Services</h3>
-                        <p>We run the business functions outside of your core competencies to improve the service quality and reduce cost.</p>
+                        <h3>Outsource Services</h3>
+                        <p>For large-scale projects, we assemble, deploy, and manage teams of experienced resources as an extension of your internal team. Whether you need help with strategy, or a fully managed end-to-end solution, we partner with you to deliver the outcomes you need.</p>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6">
                     <div class="service-wrapper">
-                        <img src="img/service-icon/box.png" alt="Service 3">
-                        <h3>Talent Acquisition Services</h3>
-                        <p>The Aptus Group recruiters can manage your recruitment process to find you the best talent to build your team.</p>
+                        <h3>Talent Acquisition</h3>
+                        <p>If you need to fill a key role in your organization, we’ll find the experienced professional that meets your unique requirements.</p>
                     </div>
                 </div>
             </div>
+            <p>Contact us today and we’ll help you find the solution that’s right for your business.</p>
         </div>
     </div>
     <div class="section">
         <div class="container">
             <h2>About Aptus Group</h2>
-            <p>We understand that business leaders want a business partner that understand the simple proposition to get work done faster, better, and more efficiently. Our teams help you achieve your business goals by understanding the underlying business problem you’re trying to solve and filling the gaps with exceptionally talented people. The Aptus Group pairs always you with the best people for your job.</p>
-            <p>When you want to hire employees permanently or on a contract basis, we provide the right scalable staffing strategy for your business and implement it quickly and efficiently. Whether you want to build a large-scale managed services team or you want to augment an existing high-performing team, we deliver you the best talent in an increasingly competitive market.</p>
+            <p>The Aptus Group delivers business and staffing services that reduces costs, enhances organizational flexibility, and improves performance. We work with you to quickly identify people with the right skills and competencies to meet your needs. Our experienced pool of professionals is fully vetted, and ready to hit the ground running—onsite or offsite—today.</p>
+            <p>Contact us to find out how we can help your organization achieve more.</p>
         </div>
     </div>
     <!-- Footer -->
@@ -241,7 +250,6 @@
     <script src="js/bootstrap.min.js"></script>
     <script src="http://cdn.leafletjs.com/leaflet-0.5.1/leaflet.js"></script>
     <script src="js/jquery.fitvids.js"></script>
-
     <script src="js/template.js"></script>
 </body>
 
