--- a/bpcs-techwrite-dashboard/index.html
+++ b/bpcs-techwrite-dashboard/index.html
@@ -58,6 +58,7 @@
                     <div class='dashboard-widget'>
                         <div class='dashboard-widget-label'>Articles In GD Review</div>
                         <div id='dashboard-articles-delivered' class='dashboard-widget-num'></div>
+                        <div id='dashboard-articles-approved'></div>
                     </div>
                 </div>
             </div>
