--- a/bpcs-v4/team.html
+++ b/bpcs-v4/team.html
@@ -115,7 +115,7 @@
                             <img src="assets/img/kyle_pic.jpg" alt="" class="img-responsive img-circle" />
                         </div>
                         <h3>Kyle Wagner</h3>
-                        <h4>VP of Operations<br>& Co-Founder</h4>
+                        <h4>Chief Operating Officer<br>& Co-Founder</h4>
                         <div class='text-content'>
                             <p>Kyle Wagner is an authentic business and technology leader with more than 20 years of experience improving the way companies operate and engage with their customers and partners. With a background in IT operations, data analytics, customer support and software development, Kyle brings a unique and broad perspective to solving complex business challenges.</p>
                         </div>
@@ -140,7 +140,7 @@
                             <img src="assets/img/danielle_pic.jpeg" alt="" class="img-responsive img-circle" />
                         </div>
                         <h3>Danielle Funston</h3>
-                        <h4>VP of People</h4>
+                        <h4>VP of Operations</h4>
                         <div class='text-content'>
                             <p>Danielle has several years of experience leading world-class service and support teams, with duties ranging from business development to employee management to marketing to reporting and process development. She has a proven record of successfully working closely with managers and executives to ensure that company goals are met.</p>
                             <div class='read-more'>
