--- a/500px-ad/index.html
+++ b/500px-ad/index.html
@@ -7,7 +7,7 @@
     <script src="https://storage.googleapis.com/code.getmdl.io/1.0.5/material.min.js"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:100,200, 300,400,500,700" type="text/css">
-    <link href='./main.css' rel='stylesheet' type='text/css'>
+    <link href='http://gnakan.github.io/500px-ad/main.css' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
@@ -26,7 +26,7 @@
         </div>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-    <script src="./main.js"></script>
+    <script src="http://gnakan.github.io/500px-ad/main.js"></script>
 </body>
 
 </html>
