--- a/aptus-site/index.html
+++ b/aptus-site/index.html
@@ -34,7 +34,7 @@
             <nav id="mainmenu" class="mainmenu">
                 <ul>
                     <li class="logo-wrapper">
-                        <a href="index.html"><img src="img/aptus_horizontal.png" alt="Aptus Group"></a>
+                        <a href="index.html"><img src="img/logos/logo_new.JPG" alt="Aptus Group"></a>
                     </li>
                     <li class="active">
                         <a href="index.html">Home</a>
