--- a/bpcs-v4/team.html
+++ b/bpcs-v4/team.html
@@ -19,6 +19,7 @@
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
+    <script src="assets/js/tabletop.js"></script>
 </head>
 
 <body>
@@ -282,7 +283,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row">
+            <div class="row" id='job-listings'>
                 <div class="col-md-4">
                     <div class='white-paper-entry'>
                         <div class='col-md-3'><i class="fa fa-comments  fa-4x"></i></div>
@@ -297,7 +298,7 @@
                     <div class='white-paper-entry'>
                         <div class='col-md-3'><i class="fa fa-users  fa-4x"></i></div>
                         <div class='col-md-8'>
-                            <h4>Customer Relationship Manager</h4>
+                            <h4>UX Designer</h4>
                             <p>Bellevue, WA</p>
                             <a href='https://jobs-bpcs.icims.com/jobs/1139/customer-relationship-manager/job'>View job <i class="fa fa-arrow-right fa-fw"></i></a>
                         </div>
@@ -307,7 +308,7 @@
                     <div class='white-paper-entry'>
                         <div class='col-md-3'><i class="fa fa-globe  fa-4x"></i></div>
                         <div class='col-md-8'>
-                            <h4>Migration Manager</h4>
+                            <h4>Data Warehouse Engineer</h4>
                             <p>North Carolina</p>
                             <a href='https://jobs-bpcs.icims.com/jobs/1116/migration-manager---north-carolina/job'>View job <i class="fa fa-arrow-right fa-fw"></i></a>
                         </div>
@@ -375,11 +376,14 @@
     <script src="assets/js/jquery.mb.YTPlayer.js"></script>
     <!-- SCROLLING SCRIPTS PLUGIN  -->
     <script src="assets/js/jquery.easing.min.js"></script>
+
+    
     <!-- CUSTOM SCRIPTS   -->
-    <script src="assets/js/custom.js"></script>
+    
     <script src="assets/js/bpcs-video.js"></script>
     <script src="assets/js/payboard.js"></script>
     <script src="assets/js/googleanalytics.js"></script>
+<script src="assets/js/custom.js"></script>
 </body>
 
 </html>
