--- a/bpcs-v4/solutions.html
+++ b/bpcs-v4/solutions.html
@@ -209,7 +209,7 @@
             <div class="row">
                 <div class="col-md-3">
                     <div class='white-paper-entry'>
-                        <a href='http://www.inc.com/profile/blueprint-consulting-services' target='blank'><img class='img-responsive' src="assets/img/awards/inc-5000-2015.png" alt="..."></a>
+                        <a href='http://www.bizjournals.com/seattle/morning_call/2015/09/washingtons-fastest-growing-private-companies.html' target='blank'><img class='img-responsive' src="assets/img/awards/washington_fastest_growing_2015.png" alt="PSBJ Top 100 Fastest Growing Private Companies"></a>
                     </div>
                 </div>
                 <div class="col-md-3">
@@ -241,6 +241,11 @@
                 </div>
                 <div class="col-md-3">
                     <a href='http://www.bizjournals.com/seattle/blog/2014/05/eastside-fastest-growing-private-companies.html' target='blank'><img class='img-responsive' src="assets/img/awards/fastest_growing_2014.png" alt="..."></a>
+                </div>
+                <div class="col-md-3">
+                    <div class='white-paper-entry'>
+                        <a href='http://www.inc.com/profile/blueprint-consulting-services' target='blank'><img class='img-responsive' src="assets/img/awards/inc-5000-2015.png" alt="..."></a>
+                    </div>
                 </div>
             </div>
             <div class='row'>
@@ -312,6 +317,7 @@
     <script src="assets/js/jquery.mb.YTPlayer.js"></script>
     <!-- SCROLLING SCRIPTS PLUGIN  -->
     <script src="assets/js/jquery.easing.min.js"></script>
+    <script src="assets/js/tabletop.js"></script>
     <!-- CUSTOM SCRIPTS   -->
     <script src="assets/js/custom.js"></script>
     <script src="assets/js/payboard.js"></script>
