--- a/bpcs-v4/work.html
+++ b/bpcs-v4/work.html
@@ -347,6 +347,7 @@
         <script src="assets/js/jquery.mb.YTPlayer.js"></script>
         <!-- SCROLLING SCRIPTS PLUGIN  -->
         <script src="assets/js/jquery.easing.min.js"></script>
+        <script src="assets/js/tabletop.js"></script>
         <!-- CUSTOM SCRIPTS   -->
         <script src="assets/js/custom.js"></script>
         <script src="assets/js/payboard.js"></script>
