--- a/bpcs-v4/connect.html
+++ b/bpcs-v4/connect.html
@@ -456,16 +456,11 @@
         </div>
     </footer>
     <!-- FOOTER SECTION END-->
-    <!-- REQUIRED SCRIPTS FILES -->
-    <!-- CORE JQUERY FILE -->
     <script src="assets/js/jquery-1.11.1.js"></script>
-    <!-- REQUIRED BOOTSTRAP SCRIPTS -->
     <script src="assets/js/bootstrap.js"></script>
-    <!-- BACKGROUND VIDEO PLUGIN  -->
     <script src="assets/js/jquery.mb.YTPlayer.js"></script>
-    <!-- SCROLLING SCRIPTS PLUGIN  -->
     <script src="assets/js/jquery.easing.min.js"></script>
-    <!-- CUSTOM SCRIPTS   -->
+    <script src="assets/js/tabletop.js"></script>
     <script src="assets/js/custom.js"></script>
     <script src="assets/js/payboard.js"></script>
     <script src="assets/js/googleanalytics.js"></script>
