--- a/bpcs-techwrite-dashboard/index.html
+++ b/bpcs-techwrite-dashboard/index.html
@@ -56,7 +56,7 @@
                 </div>
                 <div class='col-md-3'>
                     <div class='dashboard-widget'>
-                        <div class='dashboard-widget-label'>Articles In GD Review</div>
+                        <div class='dashboard-widget-label'>Articles GD Reviewed/In Review</div>
                         <div id='dashboard-articles-delivered' class='dashboard-widget-num'></div>
                         <div id='dashboard-articles-approved'></div>
                     </div>
@@ -101,6 +101,7 @@
                     </div>
                 </div>
             </div>
+            <!--
             <div class='row'>
                 <h3>Workload Status</h3>
                 <div class='col-md-6'>
@@ -138,6 +139,7 @@
                     </div>
                 </div>
             </div>
+            -->
         </div>
         <div class='table-responsive'>
             <h3>Article Details</h3>
