--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -70,6 +70,42 @@
           </div>
         </div><!-- End: Row 1-->
         
+        <div class='row'>
+          <div class="col-sm-4 text-center">
+            <div class="service-item">
+              <i class="service-icon fa icon-html5"></i>
+              <h5>Responsive Web</h5>
+              <h4>BPCS.com</h4>
+              <p><small>HTML5, CSS3, Javascript, Tabletop.js</small></p>
+              <a href='http://bpcs.com' class="btn btn-warning btn-sm " role="button">Web Link</a>
+            </div>
+          </div>
+
+          <div class="col-sm-4 text-center">
+            <div class="service-item">
+              <i class="service-icon fa icon-html5"></i>
+              <h5>Web App</h5>
+              <h4>Email Acquisition App</h4>
+              <p><small>Node.js, HTML5, CSS3, Javascript</small></p>
+              <a href='http://emailacq.azcentral.com' class="btn btn-warning btn-sm " role="button">Web Link</a>
+            </div>
+          </div>
+
+          <div class="col-sm-4 text-center">
+            <div class="service-item">
+              <i class="service-icon fa icon-angular"></i>
+              <h5>Web App</h5>
+              <h4>SecondStreet Template Generator</h4>
+              <p><small>Angularjs, HTML5, CSS3, Javascript</small></p>
+              <a href='http://pages.azcentral.com/secondstreet-generator/' class="btn btn-warning btn-sm " role="button">Web Link</a>
+            </div>
+          </div>
+
+        </div>
+
+
+
+
         <div class="row"><!-- START: Row 2-->
           
           <div class="col-sm-4 text-center"><!-- START: Product Owner Leaderboard -->
@@ -533,9 +569,9 @@
             <div class="col-sm-4 text-center">
               <div class="service-item">
                 <i class="service-icon fa icon-blogger"></i>
-                <h4>My So-Called Digital Life</h4>
+                <h4>Medium</h4>
                 <p><small>Blog</small></p>
-               <a href="http://gnakan.tumblr.com" class="btn btn-default btn-sm " role="button">Tumblr Link</a>
+               <a href="https://medium.com/@gnakan" class="btn btn-default btn-sm " role="button">Medium Link</a>
               </div>
             </div>
         </div>
@@ -603,7 +639,7 @@
               <a href="#top"><i class="fa fa-circle-arrow-up scroll fa-4x"></i></a>
             </div>
             <hr>
-            <p>Copyright &copy; Gary Nakanelua 2014</p>
+            <p>Copyright &copy; Gary Nakanelua 2015</p>
           </div>
         </div>
       </div>
