--- a/aptus-site/index.html
+++ b/aptus-site/index.html
@@ -225,11 +225,11 @@
                 <div class="col-footer col-md-4 col-xs-6">
                     <h3>Contact</h3>
                     <p class="contact-us-details">
-                        <b>Address:</b> Bellevue, Washington
-                        <br/>
-                        <b>Phone:</b> 206.455.8326
-                        <br/>
-                        <b>Email:</b> <a href="mailto:info@aptusgrp.com">info@aptusgrp.com</a>
+                        <div class='col-md-4'><b>Address:</b></div> <div class='col-md-8'>10940 NE 33rd Place<br/>Suite 202<br/>Bellevue, WA 98004</div>
+
+                        <div class='col-md-4'><b>Phone:</b></div><div class='col-md-8'>206.455.8326</div>
+
+                        <div class='col-md-4'><b>Email:</b></div><div class='col-md-8'><a href="mailto:info@aptusgrp.com">info@aptusgrp.com</a></div>
                     </p>
                 </div>
                 <div class="col-footer col-md-2 col-xs-6">
