--- a/bpcs-v4/index.html
+++ b/bpcs-v4/index.html
@@ -112,7 +112,7 @@
                         <p>
                             Recently, I was in the good company of a group of friends and acquaintances, enjoying some food, wine, and cigars. Towards the end of the evening, conversations shifted from sports, current events, religion and politics to business and technology by a couple of guys who were co-founders of a winery startup.
                         </p>
-                        <a href='http://bpcs.com/app.php'>Read more <i class="fa fa-arrow-right fa-fw"></i></a>
+                        <a href='/blog/do-you-need-an-app-for-that.html'>Read more <i class="fa fa-arrow-right fa-fw"></i></a>
                 </div>
                 <div class="col-md-4 col-sm-4 col-xs-12">
                     <i class="fa fa-calendar  fa-5x"></i>
