--- a/bpcs-v4/solutions.html
+++ b/bpcs-v4/solutions.html
@@ -134,6 +134,7 @@
                         </div>
                     </div>
                 </div>
+                <!--
                 <div class="col-md-4">
                     <div class='white-paper-entry'>
                         <div class='col-md-3'><i class="fa fa-connectdevelop  fa-4x"></i></div>
@@ -141,6 +142,17 @@
                             <h4>Measuring and Fixing Promotions In Real Time</h4>
                             <p>A complex ecosystem of ticketing tools, communication channels, social media platforms and customer service Systems made it impossible for our client to have a truly 360 degree view of the customers’ experience.</p>
                             <a href='case_studies/Measuring%20and%20Fixing%20Promotions%20In%20Real%20Time.pdf' target='blank'>Read more <i class="fa fa-arrow-right fa-fw"></i></a>
+                        </div>
+                    </div>
+                </div>
+                -->
+                <div class="col-md-4">
+                    <div class='white-paper-entry'>
+                        <div class='col-md-3'><i class="fa fa-area-chart  fa-4x"></i></div>
+                        <div class='col-md-8'>
+                            <h4>Redesigning End-to-End Customer Experience To Drive SignUp and Retention</h4>
+                            <p>Redesigning the end-to-end customer experience for a global media company allowed the team to shift focus from problem-based customer service to opportunity-driven customer retention, increasing revenue and reducing customer churn.</p>
+                            <a href='case_studies/Redesigning%20End-to-End%20Customer%20Experience%20To%20Drive%20SignUp%20and%20Retention.pdf' target='blank'>Read more <i class="fa fa-arrow-right fa-fw"></i></a>
                         </div>
                     </div>
                 </div>
@@ -158,6 +170,7 @@
                     </div>
                 </div>
                 <div class="col-md-4">
+                    <!--
                     <div class='white-paper-entry'>
                         <div class='col-md-3'><i class="fa fa-area-chart  fa-4x"></i></div>
                         <div class='col-md-8'>
@@ -166,6 +179,7 @@
                             <a href='case_studies/Redesigning%20End-to-End%20Customer%20Experience%20To%20Drive%20SignUp%20and%20Retention.pdf' target='blank'>Read more <i class="fa fa-arrow-right fa-fw"></i></a>
                         </div>
                     </div>
+                    -->
                 </div>
             </div>
         </div>
